Colaboratory を使用して作成しました

--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_bit.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPkyPgAFmlQpYSbWMas/sSK",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPgg0/7/qs9s65W1nkdskwE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,13 +50,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# 問題 整数を bitset で表せ\n",
+        "# bitset は桁数指定が必要 bitset<8> とか\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    int a = 45; // 実際上は 0b101101、あるいは 0x2d と書く\n",
+        "    cout << (bitset<6>) a << endl; //=> 001011101\n",
+        "    cout << (bitset<6>) 45 << endl; //=> 001011101\n",
+        "    cout << (bitset<6>) 0x2d << endl; //=> 001011101\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "QQm089xF8L3E",
+        "outputId": "2b19c885-c746-4ecb-f35e-bcdff2aaf419",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "AP6GqvrZ8cyx",
+        "outputId": "db219f6b-d21b-421c-f3cf-c5eb4db33e61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "101101\n",
+            "101101\n",
+            "101101\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "nqUI4aRF7_jw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6e5084c4-c0ea-4c64-85f0-d7e366d47058"
+        "outputId": "dd2d3118-5fad-4401-b34a-4e0d411d8535"
       },
       "outputs": [
         {
@@ -67,22 +127,19 @@
         }
       ],
       "source": [
-        "# この記事は bitset を使わずに bit 演算の説明をしている\n",
-        "# わかりにくいのはそのせいだと思う\n",
-        "# 45 AND 25 = 9\n",
+        "# 整数の bitset 演算\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "    int a = 45; // 実際上は 0b101101、あるいは 0x2d と書く\n",
+        "    int a = 45;\n",
         "    int b = 25;\n",
         "    cout << a << \" AND \" << b << \" = \" << (a&b) << endl; // & 1つだと bit 演算になる\n",
         "    bitset<8> c(45);\n",
         "    bitset<8> d(25);\n",
         "    cout << c << \" AND \" << d << \" = \" << (c&d) << endl;\n",
         "    cout << (bitset<8>)a <<  \" AND \" << (bitset<8>)b << \" = \" <<  (bitset<8>)(a&b) << endl;\n",
-        "    // bitset<8> を int の前に書くと int が bitset で表現される\n",
         "}"
       ]
     },
@@ -96,9 +153,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "glg2AnO496JC",
-        "outputId": "22202e45-5835-45c1-9658-92a5352ea525"
+        "outputId": "fb3a4642-0325-4f68-e337-bb7193501b11"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,13 +171,84 @@
     {
       "cell_type": "code",
       "source": [
+        "# bitset を整数に変換するには bitset の to_ullong 関数を使う\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    cout << 0b101101 << endl;\n",
+        "    bitset<8> a = 45;\n",
+        "    bitset<8> b(26);\n",
+        "    cout << a.to_ullong() << \", \" << b.to_ullong() << endl;\n",
+        "\n",
+        "    // to_string は使えるか => 使えない\n",
+        "    cout << to_string(0b101101) << endl; // 45\n",
+        "    // cout << to_string(a) << endl; // エラー\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "dhmqwcBX9zY7",
+        "outputId": "9ed4bc06-42d4-4abf-8dc0-6b3cbca3e13c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "jGJAhKoG-CkT",
+        "outputId": "0b0381f3-a4b5-4acb-a40e-c60cf696e6c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "45\n",
+            "45, 26\n",
+            "45\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "V8Xqb8kQA34e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 45 OR 25 = 61\n",
         "# bit 演算の `|` の例\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "int main() {\n",
-        "    int a = 45; // 実際上は 0b101101、あるいは 0x2d と書く\n",
+        "    int a = 45; \n",
         "    int b = 25;\n",
         "    cout << a << \" OR \" << b << \" = \" << (a|b) << endl;\n",
         "    cout << (bitset<8>)a << \" OR \" << (bitset<8>)b << \" = \" << (bitset<8>)(a|b) << endl;\n",
@@ -131,15 +259,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "veEyBbNe9yE8",
-        "outputId": "397e7e1d-4a99-4d50-8854-f02eb2883d8f"
+        "outputId": "73bfc991-4659-4c60-85ac-24ad66d45e32"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -233,21 +361,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# プログラム言語において整数 integer が中身は bit なので bit 演算をすることが出来る、というところから\n",
-        "# bit に入るのは無理があると思う\n",
-        "# 例えば通常の数値について ビット毎のNOT演算 `~`各ビットについて「ビットを反転する」という操作を\n",
-        "# やっても期待した数値にはならない\n",
-        "# 現在の c++ には bitset と言う type があるのだからそれを使おう"
-      ],
-      "metadata": {
-        "id": "iN1krhKCzFYu"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1279,7 +1392,7 @@
         "id": "zeg9eW8qxf3X",
         "outputId": "6d8f3e87-d648-4b39-b947-9eef6e2981b5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,7 +1415,7 @@
         },
         "outputId": "1b025463-fc6a-4b58-a378-0fb4f9f06958"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1353,7 +1466,7 @@
         },
         "outputId": "cb2646ac-e6d9-4d0b-d5d6-c55fa1b4d2d7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1376,7 +1489,7 @@
         "id": "GQ30Tkz9zLM0",
         "outputId": "1856e43f-7d77-4e32-b8b7-4d5e031c95f7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1429,7 +1542,7 @@
         "id": "VGY4lRwezPIY",
         "outputId": "59264d5a-7091-4da4-b5c5-cf71abfb414e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1452,7 +1565,7 @@
         "id": "pkRu7yRK03Py",
         "outputId": "85ac0f53-1378-4ffe-8e79-6c5e87158ce3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
