--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNuMT8nV9IsY8Yb63G7wCPa",
+      "authorship_tag": "ABX9TyO7tbBVSrjgTS2eFP5YuS+T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -468,7 +468,7 @@
           "height": 208
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -522,22 +522,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "V8Xqb8kQA34e"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 例えばビット bit に i 番目のフラグが立っているかどうかは if ((bit>>i) & 1) と書くこともできます。\n",
         "# また、bit｜(1<<i) といった書き方をしましたが、\n",
         "# (1<<i) のようなものは予め define してしまうことも多いです \n",
-        "#define BIT_FLAG_0 (1<<0) // 0000 0000 0000 0001\n",
-        "# (const unsigned int を使えという意見もあります)。\n",
+        "# define BIT_FLAG_0 (1<<0) // 0000 0000 0000 0001\n",
+        "# (const unsigned int を使えという意見もあります)\n",
         "# __builtin_popcount() については GCC のビルトイン関数ですので、GCC で用いる必要があります。\n",
         "\n",
         "# 以下にフラグ管理の具体的な動作確認を示します (ビットは const unsigned int で表しています):\n",
@@ -803,9 +794,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# 4. マスクビット\n",
+        "# マスクビット\n",
         "# ビットの使い方として最も多いものの 1 つがマスクビットです。\n",
-        "# なじみの深いもので言えば、IPアドレスのマスクビットや割り込み制御のマスクビットなどが挙げられます。\n",
+        "# なじみの深いもので言えば、IP アドレスのマスクビットや割り込み制御のマスクビットなどが挙げられます。\n",
         "# 多種多様な場面で使用されるマスクビットですが、基本的なアイディアは共通で、\n",
         "# \n",
         "# 複数のフラグをまとめて立てる\n",
@@ -1133,6 +1124,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ\n"
+      ],
+      "metadata": {
+        "id": "OHsm_k1MdqWM"
+      }
     },
     {
       "cell_type": "code",
