--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNsBzNIvGusHJ06SUF+3ivy",
+      "authorship_tag": "ABX9TyOiEYE04la7lUhu9pi47CVo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1321,58 +1321,18 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ\n"
-      ],
-      "metadata": {
-        "id": "OHsm_k1MdqWM"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "# 6. bit 全探索\n",
-        "# bit 全探索とは、n 個の要素からなる集合 {0,1,…,n−10,1,…,n−1} の部分集合をすべて調べ上げる手法のことです。\n",
-        "# なお、ここでは、bit 全探索の方法と具体例を簡単に記していますが、より詳細な解説は以下の記事で行いました。\n",
-        "# 疑問点が残った場合には、ぜひ読んでもらえたらと思います。\n",
-        "\n",
-        "# さて、bit 全探索は、以下のように実施できます:\n",
-        "\n",
-        "# int main() {\n",
-        "#     int n = 5;\n",
-        "#     // {0, 1, ..., n-1} の部分集合の全探索\n",
-        "#     for (int bit = 0; bit < (1<<n); ++bit){\n",
-        "#         /* bit で表される集合の処理を書く */\n",
-        "#     }\n",
-        "# }\n",
-        "\n",
-        "# と言うことだが、bitset を使った場合のテンプレートはapg4bでは次のようになっていた。\n",
-        "\n",
-        "# for (int tmp = 0; tmp < (1 << ビット数); tmp++) {\n",
-        "#   bitset<ビット数> s(tmp);\n",
-        "#   // (ビット列sに対する処理)\n",
-        "# }\n",
-        "\n",
-        "# てなんか違うね。"
-      ],
-      "metadata": {
-        "id": "z1_dYZ0but-p"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 実験 全探索の準備\n",
+        "# bit 全探索\n",
+        "# bit 全探索とは、n 個の要素からなる集合 {0,1,…,n−10,1,…,n−1} の部分集合をすべて調べ上げる手法のことです\n",
+        "# 全探索アルゴリズムの一種であり、必ずしも効率が良いわけではなく、\n",
+        "# また全探索アルゴリズムを bit 全探索アルゴリズムに書き直せるわけでもない\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
         "int main() {\n",
         "    int n = 3;\n",
-        "    cout << (1<<3) << endl;\n",
         "    // これと\n",
         "    for (int bit = 0; bit < (1<<n); ++bit){\n",
         "        cout << bit << endl;\n",
@@ -1390,15 +1350,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zeg9eW8qxf3X",
-        "outputId": "6d8f3e87-d648-4b39-b947-9eef6e2981b5"
+        "outputId": "0d93d4eb-e5a4-4180-cd7b-0fb1a21919f1"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -1413,15 +1373,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b025463-fc6a-4b58-a378-0fb4f9f06958"
+        "outputId": "d0409053-e673-4217-9eb3-3a7c23268b64"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "8\n",
             "0\n",
             "1\n",
             "2\n",
@@ -1446,7 +1405,6 @@
       "cell_type": "code",
       "source": [
         "# 問題 bitset を数字で表せ\n",
-        "# 実験 全探索\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1504,7 +1462,6 @@
       "cell_type": "code",
       "source": [
         "# 問題 bitset を数字で表せ その2\n",
-        "# 実験 全探索\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1586,181 +1543,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# bit 全探索実験\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "int main() {\n",
-        "    int n = 5;\n",
-        "\n",
-        "    // {0, 1, ..., n-1} の部分集合の全探索\n",
-        "    for (int bit = 0; bit < (1<<n); ++bit)\n",
-        "    {\n",
-        "        /* bit で表される集合の処理を書く */\n",
-        "\n",
-        "\n",
-        "        /* きちんとできていることを確認してみる */\n",
-        "        // bit の表す集合を求める\n",
-        "        vector<int> S;\n",
-        "        for (int i = 0; i < n; ++i) {\n",
-        "            if (bit & (1<<i)) { // i が bit に入るかどうか\n",
-        "                S.push_back(i);\n",
-        "            }\n",
-        "        }\n",
-        "\n",
-        "        // bit の表す集合の出力\n",
-        "        cout << bit << \": {\";\n",
-        "        for (int i = 0; i < (int)S.size(); ++i) {\n",
-        "            cout << S[i] << \" \";\n",
-        "        }\n",
-        "        cout << \"}\" << endl;\n",
-        "    }\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "lIWueRWL6nts",
-        "outputId": "b9dc2053-b300-4b39-fdc2-bff4cb9d1ae5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "metadata": {
-        "id": "_8UUu6DaflFW",
-        "outputId": "4b44f466-35c4-44fd-e5f2-30a91694c916",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0: {}\n",
-            "1: {0 }\n",
-            "2: {1 }\n",
-            "3: {0 1 }\n",
-            "4: {2 }\n",
-            "5: {0 2 }\n",
-            "6: {1 2 }\n",
-            "7: {0 1 2 }\n",
-            "8: {3 }\n",
-            "9: {0 3 }\n",
-            "10: {1 3 }\n",
-            "11: {0 1 3 }\n",
-            "12: {2 3 }\n",
-            "13: {0 2 3 }\n",
-            "14: {1 2 3 }\n",
-            "15: {0 1 2 3 }\n",
-            "16: {4 }\n",
-            "17: {0 4 }\n",
-            "18: {1 4 }\n",
-            "19: {0 1 4 }\n",
-            "20: {2 4 }\n",
-            "21: {0 2 4 }\n",
-            "22: {1 2 4 }\n",
-            "23: {0 1 2 4 }\n",
-            "24: {3 4 }\n",
-            "25: {0 3 4 }\n",
-            "26: {1 3 4 }\n",
-            "27: {0 1 3 4 }\n",
-            "28: {2 3 4 }\n",
-            "29: {0 2 3 4 }\n",
-            "30: {1 2 3 4 }\n",
-            "31: {0 1 2 3 4 }\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 部分集合全探索を bitset で書き直す \n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "vector<int> toNumVec(bitset<5> bs) {\n",
-        "    vector<int> vec;\n",
-        "    for (int i = 0; i < bs.size(); i++){\n",
-        "        if(bs.test(i)) vec.push_back(i);\n",
-        "    }\n",
-        "    return vec;\n",
-        "}\n",
-        "\n",
-        "string formatVecInt2Str(vector<int> vec){\n",
-        "    string str = \"\";\n",
-        "    str +=\"{\";\n",
-        "    bool isFirst = true;\n",
-        "    for (auto item : vec){\n",
-        "        if(!isFirst) str += \", \";\n",
-        "        str += to_string(item);\n",
-        "        isFirst = false;\n",
-        "    };\n",
-        "    str += \"}\";\n",
-        "    return str;\n",
-        "}\n",
-        "\n",
-        "int main() {\n",
-        "    const int n = 5;\n",
-        "    for (int tmp = 0; tmp < (1 << n); tmp++) {\n",
-        "        bitset<n> s(tmp);\n",
-        "        cout << tmp << \": \" << formatVecInt2Str(toNumVec(s)) << endl;\n",
-        "    }\n",
-        "}\n"
-      ],
-      "metadata": {
-        "id": "zkPFUaIKfvO7",
-        "outputId": "8467e8be-2257-4f9b-915f-746abd6d50fa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "metadata": {
-        "id": "20QaFvgDfvHa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# コーヒーフレーバーの全組み合わせ\n",
-        "# ミルク 砂糖 シナモン ウィスキー とする\n",
-        "# 部分集合全探索を bitset で書き直す \n",
+        "# 部分集合全探索\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1854,17 +1638,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ\n"
+      ],
+      "metadata": {
+        "id": "OHsm_k1MdqWM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# 確かに {0, 1, 2, 3, 4} の部分集合をすべて列挙できていますね。\n",
-        "\n",
-        "# それでは bit 全探索を用いて具体的な問題を解いてみたいと思います。\n",
-        "# 組合せ最適化の分野では非常に有名な問題で、効率よく解けるアルゴリズムは恐らく\n",
-        "# 存在しないと広く信じられています。もし万が一この問題を効率よく解けるアルゴリズムが開発できたならば、\n",
-        "# 世界中のセキュリティを支えている RSA 公開鍵暗号を効率よく解読するアルゴリズムも開発できることがわかっており、\n",
-        "# そのインパクトは半端ではないです。ノーベル賞も夢じゃないです。この辺りの事情に興味のある方は\n",
-        "# NP 完全問題について調べていただければと思います。\n",
-        "\n",
         "# 部分和問題\n",
         "# n 個の整数 a[0],a[1],…,a[n−1] が与えられる。\n",
         "# これらの整数から何個かの整数を選んで総和を K とすることができるかどうかを判定せよ。\n",
