--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOiEYE04la7lUhu9pi47CVo",
+      "authorship_tag": "ABX9TyO358E1m6C9b2P4aKn7bzJ2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1638,15 +1638,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ\n"
-      ],
-      "metadata": {
-        "id": "OHsm_k1MdqWM"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 部分和問題\n",
@@ -1726,24 +1717,22 @@
       "cell_type": "code",
       "source": [
         "# bitset で書き直す\n",
+        "# 理解のために少し単純化する\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "    int n;\n",
-        "    vector<int> a(25); // 余裕をもってサイズ 25 に\n",
-        "    int K;\n",
-        "    cin >> n;\n",
-        "    for (int i = 0; i < n; ++i) cin >> a.at(i);\n",
-        "    cin >> K;\n",
+        "    int n = 3; // 要素数 or bit 数\n",
+        "    int K = 11;  // トータル\n",
+        "    vector<int> a {7,2,9};\n",
         "    bool exist = false;\n",
         "\n",
-        "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
+        "    for (int tmp = 0; tmp < (1 << n); tmp++) {\n",
         "        bitset<3> s(tmp);\n",
         "        int sum = 0;\n",
         "        for (int i = 0; i < n; i++){\n",
-        "            if (s.test(i)) sum += a.at(i);\n",
+        "            if (s.test(i)) sum += a.at(i); // {7,2,9} の全部分集合について和を取る\n",
         "        }\n",
         "        if (sum == K) exist = true;\n",
         "    }\n",
@@ -1754,12 +1743,12 @@
       ],
       "metadata": {
         "id": "u74dYjB0lvRW",
-        "outputId": "78579735-e790-4c9c-a9bb-846c3da49695",
+        "outputId": "ab475825-21f4-48aa-c9f6-da3ae4f225d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1773,27 +1762,34 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp; echo 3 7 2 9 11 |./a.out #=> Yes\n",
-        "!g++ temp.cpp; echo 2 5 7 11 |./a.out #=> No"
+        "!g++ temp.cpp; ./a.out #=> Yes"
       ],
       "metadata": {
         "id": "DxFpqNCjl2Gg",
-        "outputId": "7bc76fb6-8c05-47d7-fda4-f27f5dbffc23",
+        "outputId": "9a64ff75-4d5e-436e-c7df-92765575d0aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Yes\n",
-            "No\n"
+            "Yes\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ\n"
+      ],
+      "metadata": {
+        "id": "OHsm_k1MdqWM"
+      }
     },
     {
       "cell_type": "code",
@@ -1810,7 +1806,7 @@
         "# 典型的な DP (動的計画法) のパターンを整理 Part1 ～ ナップサック DP 編 ～\n",
         "\n",
         "# 7. 与えられた部分集合の部分集合を列挙\n",
-        "# bit 全探索は {0,1,…,n−10,1,…,n−1} の部分集合を列挙するアルゴリズムでした。\n",
+        "# bit 全探索は {0,1,…,n−1} の部分集合を列挙するアルゴリズムでした。\n",
         "# 今度は、例えば n=10 として、{2,3,5,72,3,5,7} のように必ずしも 0,1,…,9 の\n",
         "# すべてが揃っているわけではない集合が与えられて、その部分集合を列挙する方法を考えます。\n",
         "\n",
