Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhuuI0C921HRoROX3CM7MO",
+      "authorship_tag": "ABX9TyOPjP3djhXubZGBIT6B+Ll5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -845,7 +845,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +868,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -894,29 +894,65 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題 2.3.5.1 "
+        "# 問題 2.3.5.1 関数 g(x) = log_10{x} とする時、g(1000000) の値を計算する\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "double g (double x) {return (log(x)/log(10));}\n",
+        "\n",
+        "int main() {\n",
+        "    cout << g(1000000) << endl; // 6\n",
+        "}"
       ],
       "metadata": {
-        "id": "VnQ8ShiPJbU5"
+        "id": "VnQ8ShiPJbU5",
+        "outputId": "1add2d3f-5f24-4b81-d668-8b5f7b029612",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!g++ temp.cpp; echo |./a.out "
       ],
       "metadata": {
-        "id": "XyfCJsVPJbPd"
+        "id": "XyfCJsVPJbPd",
+        "outputId": "4eee9b86-b91f-46e7-f053-13adc8f7969f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 問題 2.3.5.2 対数関係の公式を使って、log_2{16N} - log_2{N} の値を計算する。\n",
+        "# ただし、N は正の整数とする\n",
+        "# 与式 = log_2{16} + log_2{N} - log_2{N}\n",
+        "# = 4"
       ],
       "metadata": {
         "id": "Yb0TW8yPJbHM"
