--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOviH0FGmNDQVgWPVArK9Bv",
+      "authorship_tag": "ABX9TyNzwVzgVgsLjoJrLg4X15Dh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -912,7 +912,7 @@
         },
         "outputId": "1add2d3f-5f24-4b81-d668-8b5f7b029612"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,7 +935,7 @@
         },
         "outputId": "4eee9b86-b91f-46e7-f053-13adc8f7969f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,7 +1031,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 問題 次のプログラムの計算量を O 記法で表す => O(N^2)\n",
+        "# 問題 2.4.2 次のプログラムの計算量を O 記法で表す => O(N^2)\n",
         "# for (int i = 1; i <= N; i++) {\n",
         "#     for (int j = 1; j <= N * 100; j++) {\n",
         "#         cout << i << \" \" << j << endl;\n",
@@ -1047,7 +1047,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 問題 2.4.3 log_2{N} と log_10{N} は高々定数倍の違いしかない事を証明する\n",
+        "# log_2{N} / log_2{10} = log_10{N}  => 証明終わり"
       ],
       "metadata": {
         "id": "Dfh41JEVKNZ6"
@@ -1058,13 +1059,162 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 問題 2.4.4 次の表を完成させる\n",
+        "%%html\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>計算回数</th><th>実行時間目安</th><th>N log N</th><th>N^2</th><th>2^N</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>10^6 回以内</td><td>0.001 秒以下</td><td>N <= 60000</td><td>N <= 1000</td><td>N <= 20</td></tr>\n",
+        "<tr><td>10^7 回以内</td><td>0.01 秒以下</td><td>N <= 500000</td><td>N <= 3000</td><td>N <= 23</td></tr>\n",
+        "<tr><td>10^8 回以内</td><td>0.1 秒以下</td><td>N <= 4000000</td><td>N <= 10000</td><td>N <= 26</td></tr>\n",
+        "<tr><td>10^9 回以内</td><td>1 秒以下</td><td>N <= 40000000</td><td>N <= 30000</td><td>N <= 30</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
       ],
       "metadata": {
-        "id": "X6pcUoqGKNWc"
+        "id": "X6pcUoqGKNWc",
+        "outputId": "12cd1407-27cf-429d-af59-2937df7a3676",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 138
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>計算回数</th><th>実行時間目安</th><th>N log N</th><th>N^2</th><th>2^N</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>10^6 回以内</td><td>0.001 秒以下</td><td>N <= 60000</td><td>N <= 1000</td><td>N <= 20</td></tr>\n",
+              "<tr><td>10^7 回以内</td><td>0.01 秒以下</td><td>N <= 500000</td><td>N <= 3000</td><td>N <= 23</td></tr>\n",
+              "<tr><td>10^8 回以内</td><td>0.1 秒以下</td><td>N <= 4000000</td><td>N <= 10000</td><td>N <= 26</td></tr>\n",
+              "<tr><td>10^9 回以内</td><td>1 秒以下</td><td>N <= 40000000</td><td>N <= 30000</td><td>N <= 30</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 2.4.5 アルゴリズム D を実装したプログラムを N = 10, 12, 14, 16, 18, 20 で実行してみたところ\n",
+        "# 実行時間は 0.001 秒、0.006 秒、0.049 秒、0.447 秒、4.025 秒、36.189 秒になった。\n",
+        "# アルゴリズム D の計算量はどの程度か。\n",
+        "# => 下記のプログラムで結果のオーダーは合っているので O(3^N) でどうか。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    vector<double> vec = {10,12,14,16,18,20};\n",
+        "    vector<double> result;\n",
+        "    transform(vec.begin(), vec.end(), back_inserter(result), [](double x){return 0.001 * pow(3,x - 10);});\n",
+        "    for (int i = 0; i < result.size(); i++) {\n",
+        "        if (i != 0) cout << \", \";\n",
+        "        cout << result.at(i);\n",
+        "    }\n",
+        "    cout << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "tD4K62cPAXRZ",
+        "outputId": "7b425d84-6bc2-4e5e-f1c6-3e0e52678add",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out "
+      ],
+      "metadata": {
+        "id": "440mHR1qGdFl",
+        "outputId": "6ddca6c8-713b-4743-df44-0e47ddd4658a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.001, 0.009, 0.081, 0.729, 6.561, 59.049\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 2.4.6 100000 程度の単語が辞書順に並べられている時、\n",
+        "# どのような方法を使えば効率的に単語を検索できるか考える\n",
+        "# => 二分探索法"
+      ],
+      "metadata": {
+        "id": "teukujn0Jnas"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# p.62\n",
+        "# 問題 2.5.1 次の 2 つの値をそれぞれ計算する\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\sum _{i = 1}^{100} i  \\\\\n",
+        "\\\\\n",
+        "\\sum _{i = 1}^3 \\sum _{j = 1}^3 ij"
+      ],
+      "metadata": {
+        "id": "ht6MYOvCJnWh",
+        "outputId": "a62567c5-bbd3-4037-aa26-b1d9ec8f46d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\sum _{i = 1}^{100} i  \\\\\n\\\\\n\\sum _{i = 1}^3 \\sum _{j = 1}^3 ij"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
