Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNzwVzgVgsLjoJrLg4X15Dh",
+      "authorship_tag": "ABX9TyN4yuVQeZhZJeu06mX0php1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1081,7 +1081,7 @@
           "height": 138
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "data": {
@@ -1136,7 +1136,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1159,7 +1159,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,7 +1202,7 @@
           "height": 124
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1215,6 +1215,119 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 上の問題\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    int sum = 0;\n",
+        "    for (int i = 1; i <= 100; i++) {\n",
+        "        sum += i;\n",
+        "    }\n",
+        "    cout << sum << endl;\n",
+        "    sum = 0;\n",
+        "    for (int i = 1; i <= 3; i++){\n",
+        "        for (int j = 1; j <= 3; j++) {\n",
+        "            sum += i*j;\n",
+        "        }\n",
+        "    }\n",
+        "    cout << sum << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "qJo-1Uw7bll5",
+        "outputId": "f68d5609-790e-49e0-f868-d5b5dac7d297",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out "
+      ],
+      "metadata": {
+        "id": "1Z0GZ9xFbutf",
+        "outputId": "34a49663-9c5d-4755-bee6-eddb88fa64d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5050\n",
+            "36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 2.5.2 集合 S = {2,4,7}. T = {2,3,8,9} とする時、\n",
+        "# 問題 2.5.2.1 |S|, |T| => 個数なので 3, 4\n",
+        "# 問題 2.5.2.2 S \\cup T => {2,3,4,7,8,9}\n",
+        "# 問題 2.5.2.3 S \\cap T => {2}\n",
+        "# 問題 2.5.2.4 S の空でない部分集合を列挙 => "
+      ],
+      "metadata": {
+        "id": "S8A33JiPdVhd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 2.5.2.4 S の空でない部分集合を列挙\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    vector<int> S = {2,4,7};\n",
+        "\n",
+        "    for (int tmp = 0; tmp < S.size(); tmp++) {\n",
+        "        \n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "TomJ0yQhdVc4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "f5XCkYr2dVZB"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
