Colaboratory を使用して作成しました

--- a/algorithm_yonedamasataka.ipynb
+++ b/algorithm_yonedamasataka.ipynb
@@ -6,7 +6,7 @@
       "name": "algorithm_yonedamasataka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMVXmkrG4RuVfHSU8jCrJ2k",
+      "authorship_tag": "ABX9TyO4DQ4oWk7PumqeYMs7EPCm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1383,17 +1383,17 @@
         "\n",
         "int main () {\n",
         "    int N; cin >> N;\n",
-        "    long result = 1;\n",
+        "    long result = 1; // N = 20 で int では無理になる\n",
         "    for (int i = 2; i <= N; i++) result *=i;\n",
         "    cout << result << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "8dtJhW6z48aP",
-        "outputId": "19ae60ef-6c02-4573-d5ce-50a28d46edaa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8dtJhW6z48aP",
+        "outputId": "19ae60ef-6c02-4573-d5ce-50a28d46edaa"
       },
       "execution_count": 75,
       "outputs": [
@@ -1413,11 +1413,11 @@
         "!g++ temp.cpp; echo 20 |./a.out "
       ],
       "metadata": {
-        "id": "_AXihkCE48Ws",
-        "outputId": "ed944381-2626-43f0-a9fd-cb036c16ec68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_AXihkCE48Ws",
+        "outputId": "ed944381-2626-43f0-a9fd-cb036c16ec68"
       },
       "execution_count": 74,
       "outputs": [
@@ -1432,6 +1432,166 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# 問題 numeric_limits を調べる\n",
+        "# cf. N! = 2432902008176640000\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    cout << numeric_limits<int>::max() <<endl;\n",
+        "    cout << numeric_limits<long>::max() <<endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Le59Ve3eDcsD",
+        "outputId": "51c8146d-4f38-4d3f-c566-64c3f5899b9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out "
+      ],
+      "metadata": {
+        "id": "bb5OL3X7D3-T",
+        "outputId": "94c4668d-4348-45fd-f4a8-e09c95aa4685",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2147483647\n",
+            "9223372036854775807\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 2.5.4 エラトステネスの篩を使わずに N 以下の素数を小さい順に出力する\n",
+        "# O(N^2) を許容する\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main () {\n",
+        "    int N; cin >> N;\n",
+        "    for (int i = 2; i <= N; i++) {\n",
+        "        bool isPrime = true;\n",
+        "        for (int j = 2; j < i; j++) {\n",
+        "            if (i % j == 0) isPrime = false;\n",
+        "        }\n",
+        "        if (isPrime) cout << i << \" \";\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yaHC5abO48Sl",
+        "outputId": "21027053-41dd-479c-92eb-38794141eca5"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 20 |./a.out "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7NpaUgCy6Gza",
+        "outputId": "e41af7bf-513b-4022-9fdd-7cce1a3b03cd"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 3 5 7 11 13 17 19 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 2.5.5 プログラムを書かずに次の値を計算する\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\sum_{a = 1}^{4} \\sum_{b = 1}^{4} \\sum_{c = 1}^{4} abc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "id": "Bg7_L4FF6Gux",
+        "outputId": "f1ca971c-63da-42d5-8ec5-ebb1d04cb1f0"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\sum_{a = 1}^{4} \\sum_{b = 1}^{4} \\sum_{c = 1}^{4} abc"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# sum(1,2,3,4) = 10\n",
+        "# 10 + 20  + 30 + 40 = 100\n",
+        "# 100 + 200 + 300 + 4000 = 1000"
+      ],
+      "metadata": {
+        "id": "YF22_dtk6Gr7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -1443,10 +1603,83 @@
     {
       "cell_type": "code",
       "source": [
+        "# 問題 2.5.6 半開区間 [a, b) と 半開区間 [c, d) が共通部分を持つ条件を式で表す\n",
+        "# (b > c) <= これではダメ?\n",
+        "# max(a, c) < min(b, d)"
+      ],
+      "metadata": {
+        "id": "Lar28OoDJ6Yf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 2.5.7 以下のプログラムが終了した時の cnt の値。このプログラムの計算量。\n",
+        "#=> (N - 1) * N / 2 => O(N^2)\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main () {\n",
+        "    int cnt = 0;\n",
+        "    int N = 5;\n",
+        "    for (int i = 1; i <= N; i++) {\n",
+        "        for (int j = i+1; j <= N; j++) {\n",
+        "            cnt++;\n",
+        "        }\n",
+        "    }\n",
+        "    cout << cnt << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "9ReVmI2TJ6Uo",
+        "outputId": "c183a377-dd66-432a-85ac-3117ddd0596a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out "
+      ],
+      "metadata": {
+        "id": "bPqVKKDbLxrT",
+        "outputId": "f5843941-3365-4c12-c8fa-3c5544622ba2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 3 4 5 3 4 5 4 5 5 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "yaHC5abO48Sl"
+        "id": "44K-mxZWORKM"
       },
       "execution_count": null,
       "outputs": []
@@ -1457,29 +1690,7 @@
         ""
       ],
       "metadata": {
-        "id": "7NpaUgCy6Gza"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "Bg7_L4FF6Gux"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "YF22_dtk6Gr7"
+        "id": "TU-eVty_ORF2"
       },
       "execution_count": null,
       "outputs": []
@@ -1492,6 +1703,30 @@
       "metadata": {
         "id": "goC5wxn0debP"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;"
+      ],
+      "metadata": {
+        "id": "Yz2dWZyrEeqE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out "
+      ],
+      "metadata": {
+        "id": "lUtEcp2BEeIy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
